--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     justify-content: center;
     width: 100%;
     height: 100%;
+    background-color: #a0d028;
 }
 .animais{
     margin-top: 25rem;
